# haskell-rank

./: .gitignore  .travis.yml  README.rst  cabal.config  haskell-rank.cabal
01_hacker_rank_in_haskell/: SimpleArraySum.hs  SolveMeFirst.hs  TestSimpleArraySum.hs  TestSolveMeFirst.hs
02_grading_students/: .Grading.hs.swp  .TestGrading.hs.swp  Grading.hs  TestGrading.hs
03_apple_and_orange/: AppleAndOrange.hs  TestAppleAndOrange.hs
04_code_warrior/: Getmiddle.hs  TestGetmiddle.hs
app/: Main.hs
src/Ep01/: HackerRankInHaskell.hs
src/Ep02/: GradingStudents.hs
src/Ep03/: AppleAndOrange.hs
src/Ep04/: CodeWarrior.hs
test/Ep01/: HackerRankInHaskellSpec.hs
test/Ep02/: GradingStudentsSpec.hs
test/Ep03/: AppleAndOrangeSpec.hs
test/Ep04/: CodeWarriorSpec.hs
