name:                haskell-rank
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-rank#readme
license:             BSD3
--license-file:        LICENSE
author:              Tanay PrabhuDesai
maintainer:          tanayseven@gmail.com
category:            educational
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ep01.HackerRankInHaskell Ep02.GradingStudents Ep03.AppleAndOrange
                     , Ep04.CodeWarrior
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-rank
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-rank
  default-language:    Haskell2010

test-suite haskell-rank-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-rank
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-rank
